protonvpn-nm-lib (3.5.0-1) unstable; urgency=medium

  * Handle human verification

 -- Proton Technologies AG <opensource@proton.me>  Fri, 24 Sep 2021 11:30:00 +0100
 
protonvpn-nm-lib (3.4.1-3) unstable; urgency=medium

  * More often update server maintenance status 
  * Feature: Alternative routing 
  * Fix: Logs should be using UTC time
  * Fix: Add missing dependency

 -- Proton Technologies AG <opensource@proton.me>  Tue, 06 Jul 2021 17:45:00 +0100

protonvpn-nm-lib (3.3.2-1) unstable; urgency=medium

  * Remove IPv6 leak protection when there is no VPN and Kill Switch is disabled

 -- Proton Technologies AG <opensource@proton.me>  Wed, 23 Jun 2021 16:45:00 +0100

protonvpn-nm-lib (3.3.1-1) unstable; urgency=medium

  * Hotfix: Force disable connectivity check

 -- Proton Technologies AG <opensource@proton.me>  Tue, 22 Jun 2021 17:45:00 +0100

protonvpn-nm-lib (3.3.0-3) unstable; urgency=medium

  * Feature: Generate logs and open folder with logs

 -- Proton Technologies AG <opensource@proton.me>  Fri, 18 Jun 2021 14:30:00 +0100

protonvpn-nm-lib (3.2.2-11) unstable; urgency=medium

  * Bugfix: Fix various Kill Switch issues
  * Improve: VPN reconnector after suspend

 -- Proton Technologies AG <opensource@proton.me>  Tue, 8 Jun 2021 16:45:00 +0100

protonvpn-nm-lib (3.2.1-1) unstable; urgency=medium

  * Bugfix: Connect to re-configured Secure Core servers

 -- Proton Technologies AG <opensource@proton.me>  Fri, 4 Jun 2021 11:00:00 +0100

protonvpn-nm-lib (3.2.0-5) unstable; urgency=medium

  * Cache all necessary data after successfull authentication
  * Bugfix: Select working backend

 -- Proton Technologies AG <opensource@proton.me>  Fri, 21 May 2021 13:00:00 +0100

protonvpn-nm-lib (3.1.4-2) unstable; urgency=medium

  * Force update systemd service after upgrading the package
  * Bugfix: Filter out tor servers from connect fastest and fastest in country

 -- Proton Technologies AG <opensource@proton.me>  Wed, 11 May 2021 11:00:00 +0100
