@@ -1,6 +1,7 @@
 protonvpn-nm-lib (3.5.0-1) unstable; urgency=medium
 
   * Handle human verification
+  * Fix: Remove network interfaces upon reboot/shutdown if kill switch is not set to permanent
 
  -- Proton Technologies AG <opensource@proton.me>  Fri, 24 Sep 2021 11:30:00 +0100
  
